--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,6 +13,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+
 // Breakpoints.
 
 	@include breakpoints((
@@ -469,59 +470,59 @@
 		padding: 0.75em 1em;
 	}
 
-	input[type="checkbox"],
-	input[type="radio"], {
-		@include vendor('appearance', 'none');
-		display: block;
-		float: left;
-		margin-right: -2em;
-		opacity: 0;
-		width: 1em;
-		z-index: -1;
+	// input[type="checkbox"],
+	// input[type="radio"], {
+	// 	@include vendor('appearance', 'none');
+	// 	display: block;
+	// 	float: left;
+	// 	margin-right: -2em;
+	// 	opacity: 0;
+	// 	width: 1em;
+	// 	z-index: -1;
 
-		& + label {
-			@include icon(false, solid);
-			color: _palette(fg);
-			cursor: pointer;
-			display: inline-block;
-			font-size: 1em;
-			font-weight: _font(weight);
-			padding-left: (_size(element-height) * 0.6) + 0.75em;
-			padding-right: 0.75em;
-			position: relative;
+	// 	& + label {
+	// 		@include icon(false, solid);
+	// 		color: _palette(fg);
+	// 		cursor: pointer;
+	// 		display: inline-block;
+	// 		font-size: 1em;
+	// 		font-weight: _font(weight);
+	// 		padding-left: (_size(element-height) * 0.6) + 0.75em;
+	// 		padding-right: 0.75em;
+	// 		position: relative;
 
-			&:before {
-				background: _palette(border-bg);
-				border-radius: _size(border-radius);
-				border: solid 1px _palette(border);
-				content: '';
-				display: inline-block;
-				font-size: 0.8em;
-				height: (_size(element-height) * 0.75);
-				left: 0;
-				line-height: (_size(element-height) * 0.75);
-				position: absolute;
-				text-align: center;
-				top: 0;
-				width: (_size(element-height) * 0.75);
-			}
-		}
+	// 		&:before {
+	// 			background: _palette(border-bg);
+	// 			border-radius: _size(border-radius);
+	// 			border: solid 1px _palette(border);
+	// 			content: '';
+	// 			display: inline-block;
+	// 			font-size: 0.8em;
+	// 			height: (_size(element-height) * 0.75);
+	// 			left: 0;
+	// 			line-height: (_size(element-height) * 0.75);
+	// 			position: absolute;
+	// 			text-align: center;
+	// 			top: 0;
+	// 			width: (_size(element-height) * 0.75);
+	// 		}
+	// 	}
 
-		&:checked + label {
-			&:before {
-				background: _palette(dark, bg);
-				border-color: _palette(dark, bg);
-				color: _palette(dark, fg-bold);
-				content: '\f00c';
-			}
-		}
+	// 	&:checked + label {
+	// 		&:before {
+	// 			background: _palette(dark, bg);
+	// 			border-color: _palette(dark, bg);
+	// 			color: _palette(dark, fg-bold);
+	// 			content: '\f00c';
+	// 		}
+	// 	}
 
-		&:focus + label {
-			&:before {
-				border-color: _palette(accent3);
-			}
-		}
-	}
+	// 	&:focus + label {
+	// 		&:before {
+	// 			border-color: _palette(accent3);
+	// 		}
+	// 	}
+	// }
 
 	input[type="checkbox"] {
 		& + label {
@@ -1544,3 +1545,5 @@
 			}
 
 	}
+
+	
